2008-06-07  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* configure.ac:
	* ext/cdio/gstcdio.c:
	* ext/cdio/gstcdio.h:
	* ext/cdio/gstcdiocddasrc.c: (gst_cdio_cdda_src_open):
	  Require libcdio >= 0.76.

2008-06-05  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/avi/gstavidemux.c:
	Catch UNEXPECTED when downstream has reached end of
	segment in reverse mode.

2008-06-04  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/avi/gstavidemux.c:
	Fix typo in comment

2008-06-04  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/avi/gstavidemux.c:
	Because we don't know the frame order we need to push till
	the next keyframe

2008-06-04  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Sjoerd Simons <sjoerd at luon dot net>

	* sys/v4l2/gstv4l2src.c: (gst_v4l2src_class_init),
	(gst_v4l2src_fixate), (gst_v4l2src_negotiate):
	Provide a custom negotiation function to make sure to pick the highest
	possible framerate and resolution. Fixes bug #536646.

2008-06-04  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/avi/gstavidemux.c:
	Set EOS when going out of the segment in reverse playback

2008-06-04  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* ext/taglib/Makefile.am::
	  Add -Wno-attributes to CXXFLAGS to suppress warning caused by
	  taglib headers (with gcc 4.3.1).

2008-06-04  Peter Kjellerstedt  <pkj@axis.com>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_stream_configure_udp_sink):
	Use the new gst_rtsp_connection_get_ip() to access the IP address
	of a GstRTSPConnection since it is a private member.

2008-06-04  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* ext/flac/gstflacdec.c: (gst_flac_extract_picture_buffer):
	* gst/id3demux/id3v2frames.c: (parse_picture_frame):
	  Use new utility functions in libgsttag to process coverart (#512333).

2008-06-04  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/flac/gstflacdec.c: (gst_flac_dec_write):
	We actually support left/side, right/side and mid/side files. The