@@ -1,3 +1,12 @@
+2008-06-09  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	Patch by: Bastien Nocera <hadess at hadess dot net>
+
+	* sys/v4l2/gstv4l2vidorient.c:
+	* sys/v4l2/v4l2_calls.c: (gst_v4l2_fill_lists):
+	Fix compilation with newer GIT kernels that deprecated
+	V4L2_CID_HCENTER and V4L2_CID_VCENTER. Fixes bug #536317.
+
 2008-06-07  Tim-Philipp Müller  <tim.muller at collabora co uk>
 
 	* configure.ac:
